# news-places-weather

./: Dockerfile  Makefile  README.md  pyproject.toml
docker-compose/: app.yml  redis.yml
docker_compose/: app.yml
forum/: .env.example  Makefile
forum/api/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
forum/api/migrations/: 0001_initial.py  0002_alter_news_text.py  0003_place.py  0004_weather.py
forum/forum/: __init__.py  celery.py  constance.py  settings.py  settings_prod.py  urls.py
