[tool.poetry]
name = "news-weather-places"
version = "0.1.0"
description = ""
authors = ["vyacheslavi <vyach.karepov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
