[tool.poetry]
name = "news-weather-places"
version = "0.1.0"
description = ""
authors = ["vyacheslavi <vyach.karepov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
django-summernote = "^0.8.20.0"
django-constance = {extras = ["redis"], version = "^4.0.1"}
celery = "^5.4.0"
pytz = "^2024.1"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
django-admin-geomap = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
